# dlfileparser

./: README.md  dlfileparser.cabal  stack.yaml
app/: Main.hs
src/Posts/: Parser.hs
