name:                dlfileparser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dlfileparser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Posts.Parser
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     , html-entities
  default-language:    Haskell2010

executable dlfileparser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dlfileparser
                     , directory
                     , process
                     , system-filepath
                     , text
  default-language:    Haskell2010
